edition = "2023";
package settings.v1alpha1.middleware.v1;

option go_package = "github.com/atlanticdynamic/firelynx/gen/settings/v1alpha1/middleware/v1";

// Configuration for headers middleware
message HeadersConfig {
  // Operations that can be performed on headers
  message HeaderOperations {
    // Headers to set (replace existing values)
    // env_interpolation: yes
    map<string, string> set_headers = 1;

    // Headers to add (append to existing values)
    // env_interpolation: yes
    map<string, string> add_headers = 2;

    // Header names to remove
    // env_interpolation: yes
    repeated string remove_headers = 3;
  }

  // Operations to perform on request headers
  // env_interpolation: n/a (non-string)
  HeaderOperations request = 100;

  // Operations to perform on response headers
  // env_interpolation: n/a (non-string)
  HeaderOperations response = 101;
}
